# audiolm

./: .gitignore  README.md  pyproject.toml
scripts/: generate_asr_dataset.py  generate_t2t_dataset.py  generate_t2t_dataset.sh  train.py  train.sh
src/audiolm/: __init__.py  asr_preprocessing.py  audio_tokenization.py  audiolm_preprocessing.py  config.py  create_ar_de_dataset.py  datasets.py  functional.py  layers.py  qwen.py  run_asr_preprocessing.sh  schema.py  t2t_preprocessing.py  tokenizer.py  trainer.py
tests/: asr_dataset_test.py  bleuscore_test.py  generation_test.py  layer_outputs_test.py  speechtokenizer_test.py  test_dataset.py  test_trainer.sh  tokenizer_test.py  trainer_test.py
