[project]
name = "audiolm"
version = "0.1.0"
description = "An Audio Language Model"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "ajdsouz@outlook.com" },
    { name = "sslet", email = "s8saslet@stud.uni-saarland.de" },
    { name = "Houda", email = "pqr@gmail" }
]
requires-python = "==3.10"
dependencies = [
    "beartype>=0.22.9",
    "datasets>=4.8.4",
    "safetensors>=0.7.0",
    "speechtokenizer>=1.0.1",
    "tensorboard>=2.20.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.7.1",
    "lightning==2.5.4",
    "torchaudio==2.7.1",
    "torchcodec==0.5"
]
mac = [
    "torch==2.7.1",
    "lightning==2.5.4",
    "torchaudio==2.7.1", 
    "torchcodec==0.5"
]
gpu126 = [
    "torch==2.7.1",
    "lightning==2.5.4", 
    "torchaudio==2.7.1", 
    "torchcodec==0.5"
]
gpu118 = [
    "torch==2.7.1",
    "lightning==2.5.4", 
    "torchaudio==2.7.1", 
    "torchcodec==0.5"
]

[tool.uv]
conflicts = [
    [
        {extra = "cpu"},
        {extra = "mac"},
        {extra = "gpu118"},
        {extra = "gpu126"},
    ]
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
audiolm = { path = "src" }
scripts = { path = "." }
torch = [
    {index = "pytorch-cpu", extra = "cpu"}, # intel / amd cpu (Apple silicon untested)
    {index = "pypi", extra = "mac"},
    {index = "pytorch-gpu126", extra = "gpu126"}, # jones@lst
    {index = "pytorch-gpu118", extra = "gpu118"}, # jones@lst

]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
